apps/api/k8s/base/pod-no-resources.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod-no-resources
  namespace: saas-practice
spec:
  containers:
    - name: api
      image: nginx
