apps/api/k8s/base/pod-quota-test3.yaml
# pod-quota-test3.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod-quota-5
  namespace: saas-practice
spec:
  containers:
    - name: api
      image: nginx
      resources:
        requests:
          cpu: "50m"
          memory: "64Mi"
        limits:
          cpu: "100m"
          memory: "128Mi"
