apps/api/k8s/base/pod-with-resources.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod-with-resources
  namespace: saas-practice
spec:
  containers:
    - name: api
      image: nginx
      resources:
        requests:
          cpu: "150m"
          memory: "200Mi"
        limits:
          cpu: "300m"
          memory: "400Mi"
