apps/api/k8s/base/postgres-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet 
metadata:
  name: postgres # this is the name of the statefull object
spec:
  serviceName: postgres # must match headless service (link stateful to a Headless service)
  replicas: 1
  selector:
    matchLabels:
      app: postgres # this name of pods that belong to this statefulset
  template:
    metadata:
      labels:
        app: postgres # this is  labels  should new Pods have (This is the Pods)
    spec:
      containers:
        - name: postgres 
          image: postgres:15
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: postgres-data 
              mountPath: /var/lib/postgresql/data 
  volumeClaimTemplates:
    - metadata:
        name: postgres-data 
      spec:
        accessModes: ["ReadWriteOnce"]
        storageClassName: standard
        resources:
          requests:
            storage: 1Gi
