apps/api/k8s/base/netpol-allow-egress-client.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-client-egress
  namespace: saas-practice
spec:
  podSelector:
    matchLabels:
      app: client          # applies TO client-pod
  policyTypes:
    - Egress
  egress:
    - to:
        - podSelector:
            matchLabels:
              app: api     # only allow traffic TO api-pod
      ports:
        - protocol: TCP
          port: 80
