apps/api/k8s/base/netpol-deny-all.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-all
  namespace: saas-practice
spec:
  podSelector: {} # means SELECT all pods in the namespace
  policyTypes:
    - Ingress 
    - Egress  # block both incoming and outgoing traffic
